# wp-motor

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  audit.toml  quoted_field_demo.wpl  separator_demo.wpl  test_static_match.oml
.claude/: settings.local.json
.github/workflows/: ci.yml
.warp_parse/: sec_value.toml
_gal/: Cargo_tpl.toml
benches/: oml_proc_batch_nginx.rs  sink_batch_pending_blackhole.rs
config-examples/: semantic_dict_example.toml  semantic_dict_replace_mode.toml
connectors/sink.d/: 10-syslog-udp.toml  11-syslog-tcp.toml
connectors/source.d/: 10-syslog-udp.toml  11-syslog-tcp.toml
crates/: README.md
crates/orion_exp/: Cargo.toml
crates/wp-cli-core/: Cargo.toml
crates/wp-config/: Cargo.toml
crates/wp-data-utils/: Cargo.toml
crates/wp-data-utils/src/: cache.rs  conditions.rs  lib.rs  tags.rs
crates/wp-knowledge/: Cargo.toml  wp_bench_authority.sqlite
crates/wp-lang/: Cargo.toml
crates/wp-oml/: Cargo.toml
crates/wp-proj/: Cargo.toml
crates/wp-stats/: Cargo.toml
docs/: README.md  decision_sink_slow_drain.md  sink_performance_notes.md
docs/PR/: batch_processing_optimization_report.md  zero_copy_fix_report.md
docs/dar/: oml_static_blocks.md  sink_batch_buffer_strategy.md  udp_reuseport.md
docs/design/: oml_temp_field_performance.md  wpl_sep_pattern.md  wpl_sep_pattern_bench.md
scripts/: lint-zero-copy.sh
src/: lib.rs
tasks/: nlp_dict_config_system.md
tests/: error_handling.rs  parser_functionality.rs  source_config.rs  source_integration.rs  sources_unified_config.rs  syslog_test.rs  wpgen_rule_exec.rs
(+543 files in other folders)
